修改 logistic regression 內容

--- a/機器學習/Logistic Regression 模型/code.ipynb
+++ b/機器學習/Logistic Regression 模型/code.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "5e0c44ad",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
     "\n",
     "# 基本觀念還是一樣，只是會變成 n 類就有 n 個迴歸式\n",
     "\n",
-    "# 不同的迴歸式得到的 Logistic 值再用函數轉成機率，看哪一組機率比較大就是哪一組\n",
+    "# 不同的迴歸式得到的 Logistic 值即為機率，看哪一組機率比較大就是哪一組\n",
     "\n",
     "\n",
     "\n",
