修改 open , csv 模組筆記內容

--- a/python 模組使用練習/open . csv 模組.ipynb
+++ b/python 模組使用練習/open . csv 模組.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "aa130ad4",
    "metadata": {},
    "outputs": [
@@ -29,13 +29,15 @@
     "\n",
     "# 路徑 : 如果從系統資料夾路徑 copy 記得要把 \\ 改成 / 才能讀到，不然就是檔案直接 copy 路徑\n",
     "\n",
+    "# 動作 : 還有 a ( append ) 和 x ( create )\n",
+    "\n",
     "import csv\n",
     "\n",
     "import pandas\n",
     "\n",
     "# .read() 所有檔案都能讀取，直接讀取整個檔案，但輸出結構也簡單，單純為一整個字串 \n",
     "\n",
-    "# ( readline : 讀取單行而已，輸出字串 ; readlines : 讀取所有行，輸出 list )\n",
+    "# ( readline : 讀取單行而已，輸出字串，如果要讀取多行就要一直 readline ; readlines : 讀取所有行，輸出 list )\n",
     "\n",
     "with open(\"D:/Python/python 模組使用練習/data & output/20250802.csv\", \"r\") as file : \n",
     "\n",
@@ -109,7 +111,7 @@
     "\n",
     "# 內建函數 open 改成作為寫入的使用，同時亦可建立檔案\n",
     "\n",
-    "# 用內建的函數 write 只能寫入字串 , writelines 是寫入 list 但裡面元算也要是字串 \n",
+    "# 用內建的函數 write 只能寫入字串 ( 重複多次可以一直接下去 ) , writelines 是寫入 list 但裡面元素也要是字串 \n",
     "\n",
     "# ( read / write : 讀寫都是一整個字串、readlines / writelines : 讀寫都是字串 list )\n",
     "\n",
@@ -117,7 +119,7 @@
     "\n",
     "    file.write(data)\n",
     "\n",
-    "# writelines 是寫入 list，設計是為了每行寫入，但不會自己分行，要自己加 \\n\n",
+    "# writelines 是寫入 list，設計是為了每行寫入，但不會自己分行，要自己加 \\n ( 這邊 data 是字串，但字串也可以當 list，元素就是字元 )\n",
     "\n",
     "with open(\"D:/Python/python 模組使用練習/data & output/write_2.csv\", \"w\") as file : \n",
     "\n",
