--- a/基礎 python 語法練習/常見函數練習/Math 函數.ipynb
+++ b/基礎 python 語法練習/常見函數練習/Math 函數.ipynb
@@ -143,6 +143,112 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa9d5aec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.08990511 0.09342169 0.09691001 0.10037055]\n",
+      "[0.08990511 0.09342169 0.09691001 0.10037055]\n",
+      "4.9799999999999995\n",
+      "4.9799999999999995\n",
+      "4.9799999999999995\n",
+      "4.98\n",
+      "[1.2 1.2 1.2 1.3]\n",
+      "[1.2 1.2 1.2 1.3]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "type list doesn't define __round__ method",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 69\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28mprint\u001b[39m(numpy_round_list)\n\u001b[0;32m     65\u001b[0m \u001b[38;5;66;03m# math 的 sum 搭配 array 或 list 就可以，是多型的使用\u001b[39;00m\n\u001b[0;32m     66\u001b[0m \n\u001b[0;32m     67\u001b[0m \u001b[38;5;66;03m# math_round_array = round(array_number,ndigits=1)\u001b[39;00m\n\u001b[1;32m---> 69\u001b[0m math_round_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mround\u001b[39m(list_number,ndigits\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28mprint\u001b[39m(math_round_array)\n\u001b[0;32m     73\u001b[0m \u001b[38;5;28mprint\u001b[39m(math_round_list)\n",
+      "\u001b[1;31mTypeError\u001b[0m: type list doesn't define __round__ method"
+     ]
+    }
+   ],
+   "source": [
+    "# Numpy 也有很多和 math 一樣的函數，但是 numpy 支援陣列運算，math 不支援，所以要注意輸入的變數是否為陣列\n",
+    "\n",
+    "# 例如下面的例子\n",
+    "\n",
+    "# 如果不能執行，就要自己把函數搭配 universal function 來改成支援陣列的形式\n",
+    "\n",
+    "\n",
+    "import math\n",
+    "import numpy\n",
+    "\n",
+    "\n",
+    "array_number = numpy.array([1.23,1.24,1.25,1.26])\n",
+    "\n",
+    "list_number = [1.23,1.24,1.25,1.26]\n",
+    "\n",
+    "\n",
+    "# 1. log 函數\n",
+    "\n",
+    "numpy_log = numpy.log10(array_number)\n",
+    "\n",
+    "numpy_log_list = numpy.log10(list_number)\n",
+    "\n",
+    "print(numpy_log)\n",
+    "\n",
+    "print(numpy_log_list)\n",
+    "\n",
+    "# math 的 log 搭配 array 或 list 都會報錯，因為不支援陣列運算\n",
+    "\n",
+    "# math_log_array = math.log10(array_number)\n",
+    "\n",
+    "# math_log_list = math.log10(list_number)\n",
+    "\n",
+    "\n",
+    "# 2. sum 函數\n",
+    "\n",
+    "numpy_sum = numpy.sum(array_number)\n",
+    "\n",
+    "numpy_sum_list = numpy.sum(list_number)\n",
+    "\n",
+    "print(numpy_sum)\n",
+    "\n",
+    "print(numpy_sum_list)\n",
+    "\n",
+    "# math 的 sum 搭配 array 或 list 就可以，是多型的使用\n",
+    "\n",
+    "math_sum_array = sum(array_number)\n",
+    "\n",
+    "math_sum_list = sum(list_number)\n",
+    "\n",
+    "print(math_sum_array)\n",
+    "\n",
+    "print(math_sum_list)\n",
+    "\n",
+    "\n",
+    "# 3. round 函數\n",
+    "\n",
+    "numpy_round = numpy.round(array_number,1)\n",
+    "\n",
+    "numpy_round_list = numpy.round(list_number,1)\n",
+    "\n",
+    "print(numpy_round)\n",
+    "\n",
+    "print(numpy_round_list)\n",
+    "\n",
+    "# math 的 round 搭配 array 或 list 就又會報錯，所以沒有多型的支援\n",
+    "\n",
+    "# math_round_array = round(array_number,ndigits=1)\n",
+    "\n",
+    "# math_round_list = round(list_number,ndigits=1)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
