增加 numpy 模組筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -348,6 +348,12 @@
     "\n",
     "print(array_12_1)\n",
     "\n",
+    "# c-3. hstack() 及 vstack()\n",
+    "\n",
+    "# hstack 就是水平的疊加，是唯一 stack 裡面不會增加維度的用法，等同 concatenate 一維和二維的 axis = 1\n",
+    "\n",
+    "# vstack 是把陣列先轉換成垂直方向，再往航的方向疊加，等同於 stack 一維的 axis = 1\n",
+    "\n",
     "\n",
     "\n",
     "# 3. numpy 常用的資料篩選方法\n",
