新增 pandas 筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -577,7 +577,7 @@
     "\n",
     "# ( 如果只做資料列可以只放一個參數 [] ，只做欄位就要用切片 [:, ] )\n",
     "\n",
-    "# 參數可以是單一標籤，也可以是多個標籤，切片，篩選條件\n",
+    "# 參數可以是單一標籤，也可以是多個標籤，切片，篩選條件 ( 索引也可以，因為本質還是 numpy array，例如 [:,0] , [0:1,1] )\n",
     "\n",
     "# 適用 dataframe 也適用 pivot , 但是兩者欄位和資料列結構不同 , 所以要清楚自己用甚麼在做甚麼篩選，不要把欄位篩選產生的布林陣列放到資料列的\n",
     "\n",
@@ -727,6 +727,91 @@
     "result_2 = result.to_numpy()\n",
     "\n",
     "print(result_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47c638ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           日期   名稱  收盤價\n",
+      "0  2025/08/01  aaa  100\n",
+      "0  2025/08/02  bbb  110\n",
+      "0  2025/08/03  ccc  120\n",
+      "           日期   名稱  收盤價          日期   名稱  收盤價          日期   名稱  收盤價\n",
+      "0  2025/08/01  aaa  100  2025/08/02  bbb  110  2025/08/03  ccc  120\n",
+      "           日期   名稱  收盤價\n",
+      "0  2025/08/04  ddd  125\n",
+      "1  2025/08/05  eee  130\n",
+      "0  2025/08/06  fff  135\n",
+      "1  2025/08/07  eee  140\n",
+      "           日期   名稱  收盤價          日期   名稱  收盤價\n",
+      "0  2025/08/04  ddd  125  2025/08/06  fff  135\n",
+      "1  2025/08/05  eee  130  2025/08/07  eee  140\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pandas 的 concatenate 函數\n",
+    "\n",
+    "\n",
+    "# pandas 的 dataframe 也算是一種陣列，因此也有像 numpy 的 concatenate 的函數，來方便做 dataframe 的合併\n",
+    "\n",
+    "# pandas 比較單純，就只有 concatenate，沒有 stack，但是 pandas 的 concatnate 和 numpy 的版本一樣，\n",
+    "\n",
+    "# 也有分 axis = 0 or 1 不同方向的疊加，且 pandas 的 concatenate 也沒有增加維度\n",
+    "\n",
+    "# 注意 : dataframe 建立時欄位名稱沒給沒關係，會變成像 numpy 是用索引，不過一定要用 2D 表達，不然格是會變很奇怪，每一列會變成直接垂直一直往下放\n",
+    "\n",
+    "\n",
+    "import pandas\n",
+    "\n",
+    "\n",
+    "# 一維的例子\n",
+    "\n",
+    "column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "# 單列資料務必要用二維的方式來表達，不然 pandas 會以為是 n 筆資料分成不同列\n",
+    "\n",
+    "dataframe_1 = pandas.DataFrame([[\"2025/08/01\",\"aaa\",100]],columns=column)\n",
+    "dataframe_2 = pandas.DataFrame([[\"2025/08/02\",\"bbb\",110]],columns=column)\n",
+    "dataframe_3 = pandas.DataFrame([[\"2025/08/03\",\"ccc\",120]],columns=column)\n",
+    "\n",
+    "# axis = 0 ( 向 y 軸延伸，預設 )\n",
+    "\n",
+    "combine_1 = pandas.concat([dataframe_1,dataframe_2,dataframe_3])\n",
+    "\n",
+    "print(combine_1)\n",
+    "\n",
+    "# axis = 1 ( 向 x 軸延伸)\n",
+    "\n",
+    "combine_2 = pandas.concat([dataframe_1,dataframe_2,dataframe_3],axis=1)\n",
+    "\n",
+    "print(combine_2)\n",
+    "\n",
+    "\n",
+    "# 二維的例子\n",
+    "\n",
+    "dataframe_4 = pandas.DataFrame([[\"2025/08/04\",\"ddd\",125],[\"2025/08/05\",\"eee\",130]],columns=column)\n",
+    "dataframe_5 = pandas.DataFrame([[\"2025/08/06\",\"fff\",135],[\"2025/08/07\",\"ggg\",140]],columns=column)\n",
+    "\n",
+    "# axis = 0 ( 向 y 軸延伸，預設 )\n",
+    "\n",
+    "combine_3 = pandas.concat([dataframe_4,dataframe_5])\n",
+    "\n",
+    "print(combine_3)\n",
+    "\n",
+    "# axis = 1 ( 向 x 軸延伸)\n",
+    "\n",
+    "combine_4 = pandas.concat([dataframe_4,dataframe_5],axis=1)\n",
+    "\n",
+    "print(combine_4)\n",
+    "\n"
    ]
   }
  ],
