修改 pandas 模組筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "47c638ff",
    "metadata": {},
    "outputs": [
@@ -747,12 +747,12 @@
       "0  2025/08/01  aaa  100  2025/08/02  bbb  110  2025/08/03  ccc  120\n",
       "           日期   名稱  收盤價\n",
       "0  2025/08/04  ddd  125\n",
-      "1  2025/08/05  eee  130\n",
-      "0  2025/08/06  fff  135\n",
-      "1  2025/08/07  ggg  140\n",
+      "1  2025/08/05  ddd  130\n",
+      "0  2025/08/06  eee  135\n",
+      "1  2025/08/07  eee  140\n",
       "           日期   名稱  收盤價          日期   名稱  收盤價\n",
-      "0  2025/08/04  ddd  125  2025/08/06  fff  135\n",
-      "1  2025/08/05  eee  130  2025/08/07  ggg  140\n"
+      "0  2025/08/04  ddd  125  2025/08/06  eee  135\n",
+      "1  2025/08/05  ddd  130  2025/08/07  eee  140\n"
      ]
     }
    ],
@@ -797,8 +797,8 @@
     "\n",
     "# 二維的例子\n",
     "\n",
-    "dataframe_4 = pandas.DataFrame([[\"2025/08/04\",\"ddd\",125],[\"2025/08/05\",\"eee\",130]],columns=column)\n",
-    "dataframe_5 = pandas.DataFrame([[\"2025/08/06\",\"fff\",135],[\"2025/08/07\",\"jjj\",140]],columns=column)\n",
+    "dataframe_4 = pandas.DataFrame([[\"2025/08/04\",\"ddd\",125],[\"2025/08/05\",\"ddd\",130]],columns=column)\n",
+    "dataframe_5 = pandas.DataFrame([[\"2025/08/06\",\"eee\",135],[\"2025/08/07\",\"eee\",140]],columns=column)\n",
     "\n",
     "# axis = 0 ( 向 y 軸延伸，預設 )\n",
     "\n",
