新增影像強化筆記

--- a/python 模組使用練習/os , glob 模組.ipynb
+++ b/python 模組使用練習/os , glob 模組.ipynb
@@ -39,11 +39,15 @@
     "\n",
     "print(content)\n",
     "\n",
-    "# 連接檔案形成完整路徑\n",
+    "# 連接檔案形成完整路徑 ( 可以多引數來放資料夾 )\n",
     "\n",
     "join_path = os.path.join(path,\"os , glob 模組.ipynb\")\n",
     "\n",
     "print(join_path)\n",
+    "\n",
+    "join_path_2 = os.path.join(path,\"data & output\",\"os , glob 模組.ipynb\")\n",
+    "\n",
+    "print(join_path_2)\n",
     "\n",
     "# 取得檔案的建立時間 \n",
     "\n",
