新增影像增強內容

--- a/影像辨識/影像強化/code.ipynb
+++ b/影像辨識/影像強化/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "d496b97c",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
     "\n",
     "    total = total + hist_list[i]\n",
     "\n",
-    "    # round ( , 0) 就是 int()\n",
+    "    # round ( , 0) 是四捨五入，int() 是無條件捨去\n",
     "\n",
     "    transform_list[i] = int(255 * total)\n",
     "\n",
@@ -160,6 +160,108 @@
     "\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a59529bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(372, 650, 3)\n",
+      "(372, 650, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 彩色圖片影像強化\n",
+    "\n",
+    "\n",
+    "# 這邊是直接把 Equalization 使用在彩色影像的 BGR 強度上\n",
+    "\n",
+    "# 但是實際上要考慮三個顏色各自原本的比重，或者說原來圖片的特性，不然直接均化各個顏色會使多的變少，少的變多，原來色調會失調\n",
+    "\n",
+    "\n",
+    "import cv2\n",
+    "import numpy\n",
+    "\n",
+    "\n",
+    "# 1. 載入影像並區分出不同顏色的矩陣\n",
+    "\n",
+    "my_image = cv2.imread(\"image/Haku.jpg\")\n",
+    "\n",
+    "print(numpy.shape(my_image))\n",
+    "\n",
+    "# 這邊 3D 矩陣可以用切片的方式，指定最後一個維度為某一數值，達到直接選取該維度某一列，\n",
+    "\n",
+    "# 基本上就像 2D 的情況，例如 [:,1]，前面都是全選，後面指定某一個數值來達到選取某一特定行或列\n",
+    "\n",
+    "# 基本上下面就變成 n * m 的 2D 矩陣 ( 或說 n * m * 1 )，原本 3D 的 n * m 的每一個元素 list 變成剩單一數值元素\n",
+    "\n",
+    "Blue_array = my_image[:,:,0]\n",
+    "Green_array = my_image[:,:,1]\n",
+    "Red_array = my_image[:,:,2]\n",
+    "\n",
+    "# 2. 每一個顏色的矩陣都做轉換\n",
+    "\n",
+    "row = numpy.shape(Blue_array)[0]\n",
+    "column = numpy.shape(Blue_array)[1]\n",
+    "\n",
+    "# 藍色的陣列轉換\n",
+    "\n",
+    "Blue_array_2 = numpy.copy(Blue_array)\n",
+    "\n",
+    "# 這邊做法是利用布林陣列，是對整個矩陣做布林值，把符合的數值位置留下來，並指派 ( 總強度數量 - 1 ) * ( 各數值在原影像裡的累加總數 / 像素總數 )\n",
+    "\n",
+    "total = 0\n",
+    "\n",
+    "for i in range(256) : \n",
+    "\n",
+    "    total = total + numpy.sum(Blue_array == i)\n",
+    "\n",
+    "    Blue_array_2[Blue_array == i] = round(255 * total / Blue_array.size,ndigits=0)\n",
+    "\n",
+    "\n",
+    "# 綠色的陣列轉換\n",
+    "\n",
+    "Green_array_2 = numpy.copy(Green_array)\n",
+    "\n",
+    "total = 0\n",
+    "\n",
+    "for i in range(256) : \n",
+    "\n",
+    "    total = total + numpy.sum(Green_array == i)\n",
+    "\n",
+    "    Green_array_2[Green_array == i] = round(255 * total / Green_array.size,ndigits=0)\n",
+    "\n",
+    "# 紅色的陣列轉換\n",
+    "\n",
+    "Red_array_2 = numpy.copy(Red_array)\n",
+    "\n",
+    "total = 0\n",
+    "\n",
+    "for i in range(256) : \n",
+    "\n",
+    "    total = total + numpy.sum(Red_array == i)\n",
+    "\n",
+    "    Red_array_2[Red_array == i] = round(255 * total / Red_array.size,ndigits=0)\n",
+    "\n",
+    "\n",
+    "# 3. 最後把所有陣列再合併起來，變回原來的圖形矩陣\n",
+    "\n",
+    "# 基本上就是把原本的陣列切片指派為轉圜過後的陣列而已\n",
+    "\n",
+    "my_image_2 = numpy.copy(my_image)\n",
+    "\n",
+    "my_image_2[:,:,0] = Blue_array_2\n",
+    "my_image_2[:,:,1] = Green_array_2\n",
+    "my_image_2[:,:,2] = Red_array_2\n",
+    "\n",
+    "print(numpy.shape(my_image_2))\n"
    ]
   }
  ],
