--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -437,6 +437,12 @@
     "\n",
     "# dataframe[dataframe[\"欄位\"] > 0] 表示對 dataframe 用布林列來篩選符合的列\n",
     "\n",
+    "# dataframe 基本上是二維的的表格，所以產生自己手動給定資料來做 dataframe 一定要用二維 list，不然一維 list 會變成一列一個元素\n",
+    "\n",
+    "# 例如 : pandas.Dataframe([[\"20250801\",\"aaa\",\"120\"]] , columns = column_list)\n",
+    "\n",
+    "# 一維除非是用 pandas.series 才會正確，而不是 dataframe\n",
+    "\n",
     "\n",
     "# 1. 欄位 ( columns ) : 單純用 [] 和 欄位名稱 來做篩選即可\n",
     "\n",
