新增 numpy 筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a5e1b635",
    "metadata": {},
    "outputs": [
@@ -12,10 +12,10 @@
      "text": [
       "1\n",
       "2\n",
-      "[[1 2 3]\n",
-      " [4 5 6]]\n",
       "2\n",
       "[1 3 5]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
       "[[1 2 3]\n",
       " [4 5 6]]\n",
       "[[1 2 3]\n",
@@ -440,12 +440,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3]\n"
+      "[3]\n",
+      "[np.float64(0.7310585786300049) np.float64(0.8807970779778823)\n",
+      " np.float64(0.9525741268224334)]\n",
+      "[2 4 6]\n",
+      "[np.float64(0.7310585786300049), np.float64(0.8807970779778823), np.float64(0.9525741268224334)]\n",
+      "[2, 4, 6]\n"
      ]
     }
    ],
    "source": [
     "# numpy 的其他技巧\n",
+    "\n",
+    "import numpy\n",
+    "\n",
     "\n",
     "\n",
     "# 1. numpy 的一維單元素陣列可以直接當值來操作，不用做 int()\n",
@@ -454,7 +462,83 @@
     "\n",
     "a = array + 2 \n",
     "\n",
-    "print(a)\n"
+    "print(a)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2. frompyfunc() 和 map() 的陣列轉換函數\n",
+    "\n",
+    "# 一般的函數不支援陣列的引數和輸出，因此要用一些函數來幫助轉換成支援陣列\n",
+    "\n",
+    "# frompyfunc 和 map 都可以做，兩者都是一個元素一個元素丟給原來函數再將獲得結果做成陣列\n",
+    "\n",
+    "# frompyfunc 是支援輸出多個陣列輸入及輸出，map 只支援最多兩個輸入及一個輸出\n",
+    "\n",
+    "# frompyfunc 是最後轉換完再用轉換完的函數來輸入引數，map 是直接把在轉換函數內輸入原來函數和引數\n",
+    "\n",
+    "\n",
+    "# a. frompyfunc\n",
+    "\n",
+    "# 自己定義要用的函數\n",
+    "\n",
+    "def sigmoid(u) :  \n",
+    "    \n",
+    "    value = 1 / (1 + numpy.exp(-u))\n",
+    "\n",
+    "    return value\n",
+    "\n",
+    "def add(a,b) :  \n",
+    "\n",
+    "    return a + b\n",
+    "\n",
+    "# 再用 frompyfun 來轉換函數成支援陣列，第二個和第三個引數分別是輸入的陣列數和輸出的陣列數\n",
+    "\n",
+    "array_sigmoid = numpy.frompyfunc(sigmoid,1,1)\n",
+    "\n",
+    "array_add = numpy.frompyfunc(add,2,1)\n",
+    "\n",
+    "# 最後輸出就可以用轉換完的函數直接代入引數，就會自動呼叫裡面的函數來產生陣列結果\n",
+    "\n",
+    "linear_y = [1,2,3]\n",
+    "\n",
+    "y_prediction = array_sigmoid(linear_y)\n",
+    "\n",
+    "pyfunc_add = array_add(linear_y,linear_y)\n",
+    "\n",
+    "print(y_prediction)\n",
+    "\n",
+    "print(pyfunc_add)\n",
+    "\n",
+    "\n",
+    "# b. map\n",
+    "\n",
+    "#  一樣自己定義函數\n",
+    "\n",
+    "def sigmoid(u) :  \n",
+    "    \n",
+    "    value = 1 / (1 + numpy.exp(-u))\n",
+    "\n",
+    "    return value\n",
+    "\n",
+    "def add(a,b) :  \n",
+    "\n",
+    "    return a + b\n",
+    "\n",
+    "# 用 map 來轉換成支援陣列輸入及輸出，直接輸入函數和引數\n",
+    "\n",
+    "# 注意 map 輸出需要用 list 轉換才看得到\n",
+    "\n",
+    "map_sigmoid = map(sigmoid,linear_y)\n",
+    "\n",
+    "print(list(map_sigmoid))\n",
+    "\n",
+    "map_add = map(add,linear_y,linear_y)\n",
+    "\n",
+    "print(list(map_add))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 3. "
    ]
   }
  ],
