新增 pandas 和 numpy 筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -468,7 +468,7 @@
     "\n",
     "# 2. frompyfunc() 和 map() 的陣列轉換函數\n",
     "\n",
-    "# 一般的函數不支援陣列的引數和輸出，因此要用一些函數來幫助轉換成支援陣列\n",
+    "# 一般的函數不支援陣列的引數和輸出，因此要用一些函數來幫助轉換成支援陣列，就像 numpy 的函數，例如 sum、log 等等\n",
     "\n",
     "# frompyfunc 和 map 都可以做，兩者都是一個元素一個元素丟給原來函數再將獲得結果做成陣列\n",
     "\n",
