--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7c95b46a",
    "metadata": {},
    "outputs": [
@@ -694,6 +694,7 @@
     "# pandas 其他技巧\n",
     "\n",
     "\n",
+    "\n",
     "# 1. dataframe 和 pivot 一樣都是 dataframe , 只是行和列定義不太一樣，但都有 dataframe.index , dataframe.columns , dataframe.values \n",
     "\n",
     "# 可以對 dataframe.columns 和 dataframe.values 做 list , 就能得到欄位名稱和資料的 list \n",
@@ -720,6 +721,7 @@
     "print(list(result.columns))\n",
     "\n",
     "print(list(result.values))\n",
+    "\n",
     "\n",
     "\n",
     "# 2. dataframe 可以用 dataframe.to_numpy 轉成 numpy，有些使用場合會比較方便\n",
@@ -817,6 +819,127 @@
     "combine_4 = pandas.concat([dataframe_4,dataframe_5],axis=1)\n",
     "\n",
     "print(combine_4)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08b401bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         日期   名稱  開盤價  收盤價\n",
+      "0  20250801  aaa  110  120\n",
+      "          0    1\n",
+      "0  20250801  aaa\n",
+      "1  20250802  aaa\n",
+      "2  20250803  aaa\n",
+      "          0    1    2\n",
+      "0  20250801  aaa  120\n",
+      "1  20250802  aaa  130\n",
+      "2  20250803  aaa  140\n",
+      "         日期   名稱  收盤價\n",
+      "0  20250801  aaa  120\n",
+      "1  20250802  aaa  130\n",
+      "2  20250803  aaa  140\n",
+      "3  20250804  aaa  150\n",
+      "4  20250805  aaa  160\n",
+      "0  20250801  aaa  120\n",
+      "1  20250802  aaa  130\n",
+      "2  20250803  aaa  140\n",
+      "3  20250804  aaa  150\n",
+      "4  20250805  aaa  160\n",
+      "         日期   名稱  收盤價\n",
+      "0  20250801  aaa  120\n",
+      "1  20250802  aaa  130\n",
+      "2  20250803  aaa  140\n",
+      "3  20250804  aaa  150\n",
+      "4  20250805  aaa  160\n",
+      "0  20250801  aaa  120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pandas 的相關函數\n",
+    "\n",
+    "\n",
+    "import pandas\n",
+    "\n",
+    "\n",
+    "# 1. insert() \n",
+    "\n",
+    "# pandas 有 insert 可以新增欄位，跟 pandas[\"...\"] 直接產生新欄位一樣\n",
+    "\n",
+    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "# 資料記得要用 2D 陣列 [[...] , [...] , ...] \n",
+    "\n",
+    "data_row = [[\"20250801\",\"aaa\",120]]\n",
+    "\n",
+    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "# 用 insert 新增欄位，比較方便的是可以指定第幾欄，第一個引數是要插入的位置，第二個是欄位名稱，第三個是資料\n",
+    "\n",
+    "dataframe.insert(2,column=\"開盤價\",value=110)\n",
+    "\n",
+    "print(dataframe)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2. loc() 和 iloc()\n",
+    "\n",
+    "# loc 和 iloc 差別就像之前所說，loc 是針對文字標籤進行篩選的函數，iloc 是利用 index 數字標籤去篩選\n",
+    "\n",
+    "# 不過 loc 其實也支援 index 數字標籤篩選，但前提是還沒有給定文字標籤之前，基本上就是看 dataframe 的索引型態來決定\n",
+    "\n",
+    "# loc 和 iloc 用數字索引標籤時，注意是包含最後的一個數字，不像 range 或 一般 list 的切片會省略最後一個數字\n",
+    "\n",
+    "\n",
+    "# a. 刻意不給欄位文字標籤，這樣就可以用數字索引篩選\n",
+    "\n",
+    "data_row_2 = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",140],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]]\n",
+    "\n",
+    "dataframe_2 = pandas.DataFrame(data_row_2)\n",
+    "\n",
+    "select = dataframe_2.loc[0:2,0:1]\n",
+    "\n",
+    "print(select)\n",
+    "\n",
+    "# 改成欄位有文字標籤，就不能對欄位用數字索引，只能對數字索引的資料列做篩選\n",
+    "\n",
+    "dataframe_3 = pandas.DataFrame(data_row_2,columns=data_column)\n",
+    "\n",
+    "# select = dataframe_2.loc[0:2,0:1]\n",
+    "\n",
+    "select_2 = dataframe_2.loc[0:2]\n",
+    "\n",
+    "print(select_2)\n",
+    "\n",
+    "\n",
+    "# b. 不過要注意，有 concatenate 過的 dataframe 會出錯，因為索引會重複，可以看下面 concat 的結果\n",
+    "\n",
+    "# 因此盡量還是 loc 用文字，iloc 用數字，這樣比較不會有問題\n",
+    "\n",
+    "combine = pandas.concat([dataframe_3,dataframe_3])\n",
+    "\n",
+    "print(combine)\n",
+    "\n",
+    "# 用 loc 會錯誤，顯示有重複索引\n",
+    "\n",
+    "# select_3 = combine.loc[0:2]\n",
+    "\n",
+    "# print(select_3)\n",
+    "\n",
+    "# iloc 就會正確，不會管數字標籤有重複\n",
+    "\n",
+    "select_4 = combine.iloc[0:6]\n",
+    "\n",
+    "print(select_4)\n",
+    "\n",
     "\n"
    ]
   }
