新增 pandas 和 numpy 筆記

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -468,7 +468,7 @@
     "\n",
     "# 2. frompyfunc() 和 map() 的陣列轉換函數\n",
     "\n",
-    "# 一般的函數不支援陣列的引數和輸出，因此要用一些函數來幫助轉換成支援陣列，就像 numpy 的函數，例如 sum、log 等等\n",
+    "# 一般的函數不支援陣列的引數和輸出，因此要用一些函數來幫助轉換成支援陣列，就像 numpy 的函數，例如 sum、log 等等，變成可以元素對元素計算\n",
     "\n",
     "# frompyfunc 和 map 都可以做，兩者都是一個元素一個元素丟給原來函數再將獲得結果做成陣列\n",
     "\n",
@@ -537,8 +537,176 @@
     "print(list(map_add))\n",
     "\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca9ba818",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n",
+      "2\n",
+      "3\n",
+      "6\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[0. 0. 0. 0. 0.]\n",
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "[[0 0 0]\n",
+      " [0 0 0]]\n",
+      "[ 0.   2.5  5.   7.5 10. ]\n",
+      "1.5211663562401798\n",
+      "[ 0.22144747 -0.09540139 -0.52757565  0.51114629 -0.82595167  0.84017366\n",
+      "  0.83770613 -0.29746691 -0.33393879 -0.3695579 ]\n",
+      "[4.61701896 3.50162079 5.16406571 6.11615016 4.21536973 4.6418353\n",
+      " 4.70395519 7.10278689 5.84463677 4.5759755 ]\n",
+      "0.4555570715373636\n",
+      "0.5788897433754048\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numpy 常用的基本屬性 , 方法和數學函數\n",
     "\n",
-    "# 3. "
+    "\n",
+    "\n",
+    "import numpy \n",
+    "\n",
+    "\n",
+    "\n",
+    "# 1. shape() , size \n",
+    "\n",
+    "array = numpy.array([[1,2,3],[4,5,6]])\n",
+    "\n",
+    "# shape 會回傳欄和列的 tuple \n",
+    "\n",
+    "print(numpy.shape(array))\n",
+    "\n",
+    "# 可以再用索引取得欄和列的數量\n",
+    "\n",
+    "total = numpy.shape(array)\n",
+    "\n",
+    "print(total[0])\n",
+    "\n",
+    "print(total[1])\n",
+    "\n",
+    "# 用 size 就不用 row * column 來得到元素的總數\n",
+    "\n",
+    "print(array.size)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2. copy() , zeros() , zeros_like()\n",
+    "\n",
+    "# copy 是可以直接複製另一個陣列，zero 則是產生元素為 0 的陣列，而 zeros_like 就是兩者的結合，複製另一個陣列並把全部元素改為 0 \n",
+    "\n",
+    "array_2 = numpy.copy(array)\n",
+    "\n",
+    "print(array_2)\n",
+    "\n",
+    "# zeros 可以指定陣列的欄和列，只要用 tuple 在引數輸入即可\n",
+    "\n",
+    "array_3 = numpy.zeros(5)\n",
+    "\n",
+    "array_4 = numpy.zeros((2,3))\n",
+    "\n",
+    "print(array_3)\n",
+    "\n",
+    "print(array_4)\n",
+    "\n",
+    "# zeros_like 就是產生一個指定參考陣列的一樣大小的 0 陣列\n",
+    "\n",
+    "array_5 = numpy.zeros_like(array)\n",
+    "\n",
+    "print(array_5)\n",
+    "\n",
+    "\n",
+    "\n",
+    "from numpy.random import random , rand , uniform , normal\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 3. linspace() , random() , rand() , uniform() , normal()\n",
+    "\n",
+    "# 後面四個 : \n",
+    "\n",
+    "# 都是 numpy random 的隨機函數，可以用 seed() 來控制隨機種子來產生一樣的結果\n",
+    "\n",
+    "# 都支援產生陣列，size 引數可以給陣列的 tuple\n",
+    "\n",
+    "# 基本上後面四個隨機函數不給引數就是產生一個數字，如果有其他引數就是預設第一個引數為 0 , 第二個為 1\n",
+    "\n",
+    "# 例如 uniform 就是上下界為 0 , 1 , 而 random 則是 loc = 0 , scale = 1\n",
+    "\n",
+    "\n",
+    "# a. linspace()\n",
+    "\n",
+    "# linespace 是均分一個區間並產生數字\n",
+    "\n",
+    "# linespace 可以指定區間，例如下面隨機產生 0 到 10 中間 20 個點\n",
+    "\n",
+    "x_1 = numpy.linspace(0,10,5)\n",
+    "\n",
+    "print(x_1)\n",
+    "\n",
+    "\n",
+    "# b. random() 和 rand()\n",
+    "\n",
+    "# random 和 rand 都是均勻分配，隨機在 0 ~ 1 之間產生數字的隨機函數\n",
+    "\n",
+    "# 差別是 random 的引數是用 tuple 來描述陣列， rand 則是 n 個引數來描述陣列\n",
+    "\n",
+    "# random() 和 numpy.random 底下的 random_sample() , ranf() , sample() 都一樣\n",
+    "\n",
+    "# 可以自己乘上或加上數字來調整數字區間，調整方式是 min + ( max - min ) * random，像下面就變成 0 到 2\n",
+    "\n",
+    "x_2 = 2*random()\n",
+    "\n",
+    "print(x_2)\n",
+    "\n",
+    "# rand() 也是隨機在 0 ~ 1 之間產生數字的產生器，但是是用 n 個引數來表達陣列\n",
+    "\n",
+    "x_3 = 2*rand()\n",
+    "\n",
+    "print(x_3)\n",
+    "\n",
+    "\n",
+    "# c. uniform() 和 normal()\n",
+    "\n",
+    "# uniform 和 normal 有一定的分配，且可以自己設定區間或平均數和標準差，比較方便控制區間\n",
+    "\n",
+    "# uniform 第一個參數 low 是下界，第二個 high 是上界，最後一個 size 是產生數量\n",
+    "\n",
+    "a = uniform(low=-1,high=1,size=10)\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "# normal 第一個參數 loc 是平均值，第二個 scale 是標準差，最後一個 size 是產生數量\n",
+    "\n",
+    "b = normal(loc=5,scale=1,size=10)\n",
+    "\n",
+    "print(b)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b6ab090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# numpy 的統計描述函數\n",
+    "\n",
+    "\n",
+    "import numpy "
    ]
   }
  ],
