--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "08b401bf",
    "metadata": {},
    "outputs": [
@@ -859,7 +859,10 @@
       "2  20250803  aaa  140\n",
       "3  20250804  aaa  150\n",
       "4  20250805  aaa  160\n",
-      "0  20250801  aaa  120\n"
+      "0  20250801  aaa  120\n",
+      "(5, 3)\n",
+      "5\n",
+      "3\n"
      ]
     }
    ],
@@ -939,6 +942,34 @@
     "select_4 = combine.iloc[0:6]\n",
     "\n",
     "print(select_4)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 3. pandas 也有 shape 可以用，和 numpy 一樣，可以方便取得列和欄的數量\n",
+    "\n",
+    "array = dataframe_3.shape\n",
+    "\n",
+    "print(array)\n",
+    "\n",
+    "# 一樣可以用索引直接取得回傳的 tuple 的列和欄總數\n",
+    "\n",
+    "print(array[0])\n",
+    "\n",
+    "print(array[1])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "736c30f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pandas 的統計描述函數\n",
+    "\n",
+    "\n",
+    "import pandas\n",
     "\n",
     "\n"
    ]
