新增 math 和 numpy 筆記

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -445,7 +445,8 @@
       " np.float64(0.9525741268224334)]\n",
       "[2 4 6]\n",
       "[np.float64(0.7310585786300049), np.float64(0.8807970779778823), np.float64(0.9525741268224334)]\n",
-      "[2, 4, 6]\n"
+      "[2, 4, 6]\n",
+      "[np.float64(0.7310585786300049), np.float64(0.8807970779778823), np.float64(0.9525741268224334)]\n"
      ]
     }
    ],
@@ -537,6 +538,11 @@
     "print(list(map_add))\n",
     "\n",
     "\n",
+    "# c. list 的 comprehension list 就是 frompyfunc 和 map 的一個輸入和一個輸出的用法\n",
+    "\n",
+    "comprehension_list = [sigmoid(item) for item in linear_y]\n",
+    "\n",
+    "print(comprehension_list)\n",
     "\n"
    ]
   },
@@ -701,12 +707,76 @@
    "execution_count": null,
    "id": "9b6ab090",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "5\n",
+      "3.0\n",
+      "3.0\n",
+      "2.0\n",
+      "1.4142135623730951\n",
+      "1\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# numpy 的統計描述函數\n",
     "\n",
     "\n",
-    "import numpy "
+    "import numpy \n",
+    "\n",
+    "\n",
+    "# 1. mean , var , std , sum , max , min\n",
+    "\n",
+    "# 就是計算一群數字的統計量的函數，或者說聚合函數\n",
+    "\n",
+    "array = numpy.array([1,2,3,4,5])\n",
+    "\n",
+    "# sum 和 count ( 只有 count_nonzero , 元素總數是 size ) 是基本資訊\n",
+    "\n",
+    "numpy_sum = numpy.sum(array)\n",
+    "\n",
+    "numpy_count = array.size\n",
+    "\n",
+    "print(numpy_sum)\n",
+    "\n",
+    "print(numpy_count)\n",
+    "\n",
+    "# mean , median 是集中量數 \n",
+    "\n",
+    "numpy_mean = numpy.mean(array)\n",
+    "\n",
+    "numpy_median = numpy.median(array)\n",
+    "\n",
+    "print(numpy_mean)\n",
+    "\n",
+    "print(numpy_median)\n",
+    "\n",
+    "# var , std , max , min 是離散量數\n",
+    "\n",
+    "numpy_var = numpy.var(array)\n",
+    "\n",
+    "numpy_std = numpy.std(array)\n",
+    "\n",
+    "numpy_min = numpy.min(array)\n",
+    "\n",
+    "numpy_max = numpy.max(array)\n",
+    "\n",
+    "print(numpy_var)\n",
+    "\n",
+    "print(numpy_std)\n",
+    "\n",
+    "print(numpy_min)\n",
+    "\n",
+    "print(numpy_max)\n",
+    "\n",
+    "\n",
+    "# 2. 其他統計量的計算可以用 statistics 或 scipy.stats 的統計模組\n",
+    "\n"
    ]
   }
  ],
