--- a/基礎 python 語法練習/常見函數練習/Math 函數.ipynb
+++ b/基礎 python 語法練習/常見函數練習/Math 函數.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "aa9d5aec",
    "metadata": {},
    "outputs": [
@@ -161,12 +161,16 @@
       "4.9799999999999995\n",
       "4.98\n",
       "[1.2 1.2 1.2 1.3]\n",
-      "[1.2 1.2 1.2 1.3]\n"
+      "[1.2 1.2 1.2 1.3]\n",
+      "[2.46 2.48 2.5  2.52]\n",
+      "[0. 0. 0. 0.]\n",
+      "[1.5129 1.5376 1.5625 1.5876]\n",
+      "[1.10905365 1.11355287 1.11803399 1.12249722]\n"
      ]
     }
    ],
    "source": [
-    "# Numpy 也有很多和 math 一樣的函數，但是 numpy 支援陣列運算，math 不支援，所以要注意輸入的變數是否為陣列\n",
+    "# Numpy 也有很多和 math 一樣的函數，但是 numpy 支援陣列運算，math 不支援 array 或 list ( 偶爾某些函數可做 1D 陣列 或 list，2D 完全不行 )，所以要注意輸入的變數是否為陣列\n",
     "\n",
     "# 例如下面的例子\n",
     "\n",
@@ -211,6 +215,8 @@
     "\n",
     "# math 的 sum 搭配 array 或 list 就可以，是多型的使用\n",
     "\n",
+    "# 但是 2D 的陣列 sum 就會失效，只支援 1D\n",
+    "\n",
     "math_sum_array = sum(array_number)\n",
     "\n",
     "math_sum_list = sum(list_number)\n",
@@ -235,6 +241,35 @@
     "# math_round_array = round(array_number,ndigits=1)\n",
     "\n",
     "# math_round_list = round(list_number,ndigits=1)\n",
+    "\n",
+    "\n",
+    "# 4. add , subtract 函數\n",
+    "\n",
+    "# numpy 的 add 和 subtract，就是兩個陣列之間加和減\n",
+    "\n",
+    "numpy_add = numpy.add(array_number,array_number)\n",
+    "\n",
+    "numpy_subtract = numpy.subtract(array_number,array_number)\n",
+    "\n",
+    "print(numpy_add)\n",
+    "\n",
+    "print(numpy_subtract)\n",
+    "\n",
+    "\n",
+    "# 5. power , sqrt 函數\n",
+    "\n",
+    "# numpy 的 power 和 sqrt，就是對陣列數值取指數和開平方根\n",
+    "\n",
+    "numpy_power = numpy.power(array_number,2)\n",
+    "\n",
+    "numpy_sqrt = numpy.sqrt(array_number)\n",
+    "\n",
+    "print(numpy_power)\n",
+    "\n",
+    "print(numpy_sqrt)\n",
+    "\n",
+    "\n",
+    "# 6. mean , var , std , min , max , sum 函數可以看 numpy 的筆記\n",
     "\n",
     "\n"
    ]
