新增 numpy 模組筆記

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "9b6ab090",
    "metadata": {},
    "outputs": [
@@ -719,12 +719,19 @@
       "2.0\n",
       "1.4142135623730951\n",
       "1\n",
-      "5\n"
+      "5\n",
+      "[[2.5  1.25]\n",
+      " [1.25 0.7 ]]\n",
+      "[[1.         0.94491118]\n",
+      " [0.94491118 1.        ]]\n"
      ]
     }
    ],
    "source": [
-    "# numpy 的統計描述函數\n",
+    "# numpy 資料整理的相關函數\n",
+    "\n",
+    "\n",
+    "# a. numpy 的統計描述函數\n",
     "\n",
     "\n",
     "import numpy \n",
@@ -756,7 +763,7 @@
     "\n",
     "print(numpy_median)\n",
     "\n",
-    "# var , std , max , min 是離散量數\n",
+    "# var , std , max , min 是離散量數 ( 這邊的 var 是樣本的 var，是除 N - 1 )\n",
     "\n",
     "numpy_var = numpy.var(array)\n",
     "\n",
@@ -774,8 +781,28 @@
     "\n",
     "print(numpy_max)\n",
     "\n",
+    "# 2. 相關性 corvariance 和 correlation 的計算\n",
     "\n",
-    "# 2. 其他統計量的計算可以用 statistics 或 scipy.stats 的統計模組\n",
+    "# cov 和 corrcoef 都是產生矩陣\n",
+    "\n",
+    "# 可以發現這邊 cov 的對角線是自己對自己數列的變異數 ( 這邊是除 N )，因此很接近上面 var 計算結果\n",
+    "\n",
+    "array_2 = numpy.array([1,2,2,3,3])\n",
+    "\n",
+    "numpy_cov = numpy.cov(array,array_2)\n",
+    "\n",
+    "numpy_correlate = numpy.corrcoef(array,array_2)\n",
+    "\n",
+    "print(numpy_cov)\n",
+    "\n",
+    "print(numpy_correlate)\n",
+    "\n",
+    "\n",
+    "# 3. 其他統計量的計算可以用 statistics 或 scipy.stats 的統計模組\n",
+    "\n",
+    "\n",
+    "# b. 遺漏值 或 NAN 的篩選和移除\n",
+    "\n",
     "\n"
    ]
   }
