新增資料處理類別以及修改 Numpy 內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -579,7 +579,7 @@
     }
    ],
    "source": [
-    "# numpy 常用的基本屬性 , 方法和數學函數\n",
+    "# numpy 常用的數學方法和數學函數\n",
     "\n",
     "\n",
     "\n",
@@ -587,31 +587,11 @@
     "\n",
     "\n",
     "\n",
-    "# 1. shape() , size \n",
-    "\n",
-    "array = numpy.array([[1,2,3],[4,5,6]])\n",
-    "\n",
-    "# shape 會回傳欄和列的 tuple \n",
-    "\n",
-    "print(numpy.shape(array))\n",
-    "\n",
-    "# 可以再用索引取得欄和列的數量\n",
-    "\n",
-    "total = numpy.shape(array)\n",
-    "\n",
-    "print(total[0])\n",
-    "\n",
-    "print(total[1])\n",
-    "\n",
-    "# 用 size 就不用 row * column 來得到元素的總數\n",
-    "\n",
-    "print(array.size)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 2. copy() , zeros() , zeros_like()\n",
+    "# 1. copy() , zeros() , zeros_like()\n",
     "\n",
     "# copy 是可以直接複製另一個陣列，zero 則是產生元素為 0 的陣列，而 zeros_like 就是兩者的結合，複製另一個陣列並把全部元素改為 0 \n",
+    "\n",
+    "array = numpy.array([[1,2,3],[4,5,6]])\n",
     "\n",
     "array_2 = numpy.copy(array)\n",
     "\n",
@@ -639,7 +619,7 @@
     "\n",
     "\n",
     "\n",
-    "# 3. linspace() , random() , rand() , uniform() , normal()\n",
+    "# 2. linspace() , random() , rand() , uniform() , normal()\n",
     "\n",
     "# 後面四個 : \n",
     "\n",
