--- a/資料處理/資料統計特徵/code.ipynb
+++ b/資料處理/資料統計特徵/code.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. 基本陣列大小 , 資料列 , 欄位數量 "
+    "# 1. 基本陣列大小 , 資料列數量 , 欄位數量 "
    ]
   },
   {
@@ -35,12 +35,26 @@
    "execution_count": null,
    "id": "3ef93d17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n",
+      "2\n",
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy\n",
     "\n",
     "\n",
-    "# a. shape()\n",
+    "# a. numpy 的基本陣列資訊\n",
+    "\n",
+    "\n",
+    "# a-1. shape()\n",
     "\n",
     "array = numpy.array([[1,2,3],[4,5,6]])\n",
     "\n",
@@ -56,11 +70,68 @@
     "\n",
     "print(total[1])\n",
     "\n",
-    "# b. size\n",
+    "\n",
+    "# a-2. size\n",
     "\n",
     "# 用 size 就不用 row * column 來得到元素的總數\n",
     "\n",
-    "print(array.size)"
+    "print(array.size)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "91089c00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 3)\n",
+      "5\n",
+      "3\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas\n",
+    "\n",
+    "\n",
+    "# b. pandas 的基本矩陣資訊\n",
+    "\n",
+    "\n",
+    "# b-1. shape\n",
+    "\n",
+    "# 和 numpy 一樣，只是方法變成屬性\n",
+    "\n",
+    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",140],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]]\n",
+    "\n",
+    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "array = dataframe.shape\n",
+    "\n",
+    "print(array)\n",
+    "\n",
+    "row = array[0]\n",
+    "\n",
+    "column = array[1]\n",
+    "\n",
+    "print(row)\n",
+    "\n",
+    "print(column)\n",
+    "\n",
+    "\n",
+    "# b-2. size\n",
+    "\n",
+    "# 這裡就和 numpy 一模一樣\n",
+    "\n",
+    "total = dataframe.size\n",
+    "\n",
+    "print(total)\n"
    ]
   },
   {
@@ -75,10 +146,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f61623fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "5\n",
+      "3.0\n",
+      "3.0\n",
+      "2.0\n",
+      "1.4142135623730951\n",
+      "1\n",
+      "5\n",
+      "[[2.5  1.25]\n",
+      " [1.25 0.7 ]]\n",
+      "[[1.         0.94491118]\n",
+      " [0.94491118 1.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy \n",
     "\n",
@@ -148,11 +238,40 @@
     "\n",
     "print(numpy_correlate)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52833c19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "\n",
+    "\n",
+    "# a. pandas 的統計描述函數\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
