--- a/資料處理/資料統計特徵/code.ipynb
+++ b/資料處理/資料統計特徵/code.ipynb
@@ -13,11 +13,11 @@
     "\n",
     "# 在進行資料運用之前先確認資料\n",
     "\n",
-    "# a. 基本陣列大小 , 資料列 , 欄位數量 \n",
+    "# a. 基本資料資訊 , 例如 : 陣列大小 , 列數量 , 欄位數量 , 型別\n",
     "\n",
-    "# b. 各欄位的統計敘述 , 相關性\n",
+    "# b. 各欄位的統計敘述 , 資料分布 , 圖形化呈現\n",
     "\n",
-    "# c. 各欄位的資料分布，圖形化呈現\n",
+    "# c. 各欄位的相關性 , 圖形化呈現\n",
     "\n",
     "\n"
    ]
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. 基本陣列大小 , 資料列數量 , 欄位數量 "
+    "# 1. 基本資料資訊 , 例如 : 陣列大小 , 列數量 , 欄位數量 , 型別"
    ]
   },
   {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "91089c00",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,17 @@
       "(5, 3)\n",
       "5\n",
       "3\n",
-      "15\n"
+      "15\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   日期      5 non-null      object\n",
+      " 1   名稱      5 non-null      object\n",
+      " 2   收盤價     5 non-null      int64 \n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 252.0+ bytes\n"
      ]
     }
    ],
@@ -133,7 +143,14 @@
     "\n",
     "total = dataframe.size\n",
     "\n",
-    "print(total)\n"
+    "print(total)\n",
+    "\n",
+    "\n",
+    "# b-3. info()\n",
+    "\n",
+    "# 可以看各欄位的資料型別 , 是否有遺漏值 , 很方便的功能\n",
+    "\n",
+    "dataframe.info()\n"
    ]
   },
   {
@@ -143,12 +160,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. 各欄位的統計敘述 , 分布 , 相關性 "
+    "# 2. 各欄位的統計敘述 , 資料分布 , 圖形化呈現"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "f61623fd",
    "metadata": {},
    "outputs": [
@@ -163,11 +180,7 @@
       "2.0\n",
       "1.4142135623730951\n",
       "1\n",
-      "5\n",
-      "[[2.5  1.25]\n",
-      " [1.25 0.7 ]]\n",
-      "[[1.         0.94491118]\n",
-      " [0.94491118 1.        ]]\n"
+      "5\n"
      ]
     }
    ],
@@ -175,16 +188,18 @@
     "import numpy \n",
     "\n",
     "\n",
-    "# a. numpy 的統計描述函數\n",
     "\n",
-    "\n",
-    "# a-1. mean , var , std , sum , max , min\n",
+    "# a. numpy 的統計敘述函數\n",
     "\n",
     "# 就是計算一群數字的統計量的函數，或者說聚合函數\n",
     "\n",
-    "array = numpy.array([1,2,3,4,5])\n",
     "\n",
-    "# sum 和 count ( 只有 count_nonzero , 元素總數是 size ) 是基本資訊\n",
+    "\n",
+    "# a-1. sum , count 是基本資訊\n",
+    "\n",
+    "# count 元素總數是 size 代替 , 如果要 count 只有 count_nonzero\n",
+    "\n",
+    "array = numpy.array([1,2,3,4,5])\n",
     "\n",
     "numpy_sum = numpy.sum(array)\n",
     "\n",
@@ -194,7 +209,8 @@
     "\n",
     "print(numpy_count)\n",
     "\n",
-    "# mean , median 是集中量數 \n",
+    "\n",
+    "# a-2. mean , median 是集中量數 \n",
     "\n",
     "numpy_mean = numpy.mean(array)\n",
     "\n",
@@ -205,7 +221,9 @@
     "print(numpy_median)\n",
     "\n",
     "\n",
-    "# a-2.  var , std , max , min 是離散量數 ( 這邊的 var 是樣本的 var，是除 N - 1 )\n",
+    "# a-3.  var , std , max , min 是離散量數 \n",
+    "\n",
+    "# 這邊的 var 是樣本的 var，是除 N - 1 \n",
     "\n",
     "numpy_var = numpy.var(array)\n",
     "\n",
@@ -221,24 +239,7 @@
     "\n",
     "print(numpy_min)\n",
     "\n",
-    "print(numpy_max)\n",
-    "\n",
-    "\n",
-    "# a-3. 相關性 corvariance 和 correlation 的計算\n",
-    "\n",
-    "# cov 和 corrcoef 都是產生矩陣\n",
-    "\n",
-    "# 可以發現這邊 cov 的對角線是自己對自己數列的變異數 ( 這邊是除 N )，因此很接近上面 var 計算結果\n",
-    "\n",
-    "array_2 = numpy.array([1,2,2,3,3])\n",
-    "\n",
-    "numpy_cov = numpy.cov(array,array_2)\n",
-    "\n",
-    "numpy_correlate = numpy.corrcoef(array,array_2)\n",
-    "\n",
-    "print(numpy_cov)\n",
-    "\n",
-    "print(numpy_correlate)"
+    "print(numpy_max)\n"
    ]
   },
   {
@@ -246,13 +247,156 @@
    "execution_count": null,
    "id": "52833c19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>收盤價</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>140.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>15.811388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>120.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>130.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>140.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>150.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>160.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              收盤價\n",
+       "count    5.000000\n",
+       "mean   140.000000\n",
+       "std     15.811388\n",
+       "min    120.000000\n",
+       "25%    130.000000\n",
+       "50%    140.000000\n",
+       "75%    150.000000\n",
+       "max    160.000000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas\n",
     "\n",
     "\n",
-    "# a. pandas 的統計描述函數\n",
+    "# b. pandas 的統計描述函數\n",
     "\n",
+    "\n",
+    "# b-3. describe()\n",
+    "\n",
+    "# 可以直接對數值欄位產生基本統計敘述，很方便\n",
+    "\n",
+    "dataframe.describe()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "375fcb7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. 各欄位的相關性 , 圖形化呈現"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e3597990",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.5  1.25]\n",
+      " [1.25 0.7 ]]\n",
+      "[[1.         0.94491118]\n",
+      " [0.94491118 1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "\n",
+    "# a. numpy 的相關性計算函數\n",
+    "\n",
+    "\n",
+    "# a-1. covariance 的計算\n",
+    "\n",
+    "# cov 和 corrcoef 都是產生矩陣\n",
+    "\n",
+    "# 可以發現這邊 cov 的對角線是自己對自己數列的變異數 ( 這邊是除 N )，因此很接近上面 var 計算結果\n",
+    "\n",
+    "array = numpy.array([1,2,3,4,5])\n",
+    "\n",
+    "array_2 = numpy.array([1,2,2,3,3])\n",
+    "\n",
+    "numpy_cov = numpy.cov(array,array_2)\n",
+    "\n",
+    "print(numpy_cov)\n",
+    "\n",
+    "\n",
+    "# a-2. correlation 的計算\n",
+    "\n",
+    "# corrcoef 也是產生矩陣\n",
+    "\n",
+    "numpy_correlate = numpy.corrcoef(array,array_2)\n",
+    "\n",
+    "print(numpy_correlate)\n",
     "\n"
    ]
   }
