增加基本變數型別練習筆記

--- a/基礎 python 語法練習/基本變數型別練習/code.ipynb
+++ b/基礎 python 語法練習/基本變數型別練習/code.ipynb
@@ -1098,6 +1098,28 @@
     "\n",
     "print(c[0][\"department\"])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d43e506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dictionary 的排序\n",
+    "\n",
+    "a = [10,25,20]\n",
+    "\n",
+    "pair = dict(enumerate(a))\n",
+    "\n",
+    "# 用 items 來排序 , 還有 key 以 lamda 傳入每個 items 元素的 values 來做為排序依據\n",
+    "\n",
+    "sort_pair = sorted(pair.items(),key=lambda item:item[1],reverse=True)\n",
+    "\n",
+    "# 最後得到是 list of tuple \n",
+    "\n",
+    "print(sort_pair)"
+   ]
   }
  ],
  "metadata": {
