新增 numpy 模組筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -433,6 +433,230 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e5f01cd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3]\n",
+      "1\n",
+      "[1 2 3]\n",
+      "1\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "[1 2]\n",
+      "1\n",
+      "[1 2 3]\n",
+      "[1 4]\n",
+      "[1 2]\n",
+      "[1 3 5]\n",
+      "[1 7]\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "[[1 2]\n",
+      " [7 8]]\n",
+      "[[ 1  3  5]\n",
+      " [ 7  9 11]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[255 255 255]\n",
+      " [255 255 255]]\n",
+      "255\n",
+      "[[ True  True  True]\n",
+      " [False False False]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numpy 的其他基本觀念補充\n",
+    "\n",
+    "\n",
+    "import numpy\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 1. numpy 的一維單元素陣列可以直接當值來操作，不用做 int()\n",
+    "\n",
+    "array = numpy.array([1])\n",
+    "\n",
+    "a = array + 2 \n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2. numpy 的基礎是 list , 所以多維陣列就是多維 list，元素會是相對應的 list\n",
+    "\n",
+    "\n",
+    "# a. 組成陣列\n",
+    "\n",
+    "# 一維的 numpy 就是 一維的 list 產生\n",
+    "\n",
+    "one_dimension = numpy.array([1,2,3])\n",
+    "\n",
+    "# 二維的 numpy 就是 二維的 list 產生，注意是 list of list\n",
+    "\n",
+    "two_dimension = numpy.array([ [1,2,3] , [4,5,6] ])\n",
+    "\n",
+    "# 三維的 numpy 就是 三維的 list 產生，所以是 list of list of list\n",
+    "\n",
+    "three_dimension = numpy.array([ [ [1,2] , [3,4] , [5,6] ] , [ [7,8] , [9,10] , [11,12] ] ])\n",
+    "\n",
+    "\n",
+    "# b. 呼叫元素\n",
+    "\n",
+    "# 呼叫自己維度一定是最小的階層，也就是個別元素，而往上就是 list，list of list ...一直往上\n",
+    "\n",
+    "# 一維 : 因為是一維，所以呼叫一維一定是元素而已\n",
+    "\n",
+    "one_d_one_call = one_dimension[0]\n",
+    "\n",
+    "print(one_d_one_call)\n",
+    "\n",
+    "# 二維 : 二維呼叫就是某列的某行元素，最基本元素，往上一維呼叫就是列的 list，因為 array 是用列去分 list\n",
+    "\n",
+    "two_d_one_call = two_dimension[0]\n",
+    "\n",
+    "two_d_two_call = two_dimension[0,0]\n",
+    "\n",
+    "print(two_d_one_call)\n",
+    "\n",
+    "print(two_d_two_call)\n",
+    "\n",
+    "# 三維 : 三維呼叫就是某列某行的第幾個元素，最基本元素，往上一維就是某列某行的 list，再往上就是某列的 list of list\n",
+    "\n",
+    "three_d_one_call = three_dimension[0]\n",
+    "\n",
+    "three_d_two_call = three_dimension[0,0]\n",
+    "\n",
+    "three_d_three_call = three_dimension[0,0,0]\n",
+    "\n",
+    "print(three_d_one_call)\n",
+    "\n",
+    "print(three_d_two_call)\n",
+    "\n",
+    "print(three_d_three_call)\n",
+    "\n",
+    "\n",
+    "# c. 部分切片\n",
+    "\n",
+    "# 可以一樣用呼叫的層級來思考 : \n",
+    "\n",
+    "    # 全部填滿 : 最低層級 , 所以是 元素\n",
+    "\n",
+    "    # 拿掉一個不填滿 : 往上一個層級，所以是 list，反過來說就是用指定的 \" 列與行 \" 或 \" 行與高度 \" 或 \" 列與高度 \" 來抓指定位置的 list ( 序列 )\n",
+    "    \n",
+    "    # 拿掉兩個不填滿 : 再往上一個層級，所以是 list of list，反過來說就是用指定的 \" 行 \" 或 \" 列 \" 或 \" 高度 \" 來抓指定行或列或高度的 list of list\n",
+    "\n",
+    "# 維度的思考方式 : \n",
+    "\n",
+    "    # 固定一維 ( 拿掉兩個不填滿 ) : 一個維度固定住，只看某一維度底下的情況，例如三維固定一維，看該維度底下的其他二維平面 / list of list 情況 ( 三維變二維，二維變一維 )\n",
+    "\n",
+    "    # 固定二維 ( 拿掉一個不填滿 ) : 兩個維度固定住，只看某兩個維度底下的情況，或說平面上某一點向另一軸發展的 list 情況 ( 三維變一維 )\n",
+    "\n",
+    "    # 本質上就是看該指定維度的元素，指定越高維就是越確定，就會使想看的維度越低\n",
+    "\n",
+    "    # 例如 : 列固定，那就是產生列的結果，只是看底下行的元素\n",
+    "\n",
+    "    # 例如 : 列和行固定，那就是產生列和行交叉的結果，只是看底下高度的元素\n",
+    "\n",
+    "    # 也可以想成降維，固定一維就是少一維，剩另一邊行或列在變化，固定二維就是少兩維，那就剩高度在變化\n",
+    "\n",
+    "# 二維降一維 : 指定抓某一 \" 列 \" 或 \" 行 \" 的資料，\n",
+    "\n",
+    "# 或說只看某一 \" 行 \" 或 \" 列 \"  底下的變化，就是二維少一維，變成一個序列而已\n",
+    "\n",
+    "two_d_row_partial = two_dimension[0,:]\n",
+    "\n",
+    "two_d_column_partial = two_dimension[:,0]\n",
+    "\n",
+    "print(two_d_row_partial)\n",
+    "\n",
+    "print(two_d_column_partial)\n",
+    "\n",
+    "# 三維降一維 : 指定抓某一 \" 列與行 \" 或 \" 行與高度 \" 或 \" 列與高度 \" 的資料，\n",
+    "\n",
+    "# 或說只看某一 \" 列與行 \"\" 或 \" 行與高度 \" 或 \" 列與高度 \" 底下的變化，三維少二維就變成是一維的序列\n",
+    "\n",
+    "three_d_row_column_partial = three_dimension[0,0,:]\n",
+    "\n",
+    "three_d_row_altitude_partial = three_dimension[0,:,0]\n",
+    "\n",
+    "three_d_column_altitude_partial = three_dimension[:,0,0]\n",
+    "\n",
+    "print(three_d_row_column_partial)\n",
+    "\n",
+    "print(three_d_row_altitude_partial)\n",
+    "\n",
+    "print(three_d_column_altitude_partial)\n",
+    "\n",
+    "# 三維降一維 : 指定抓某一 \" 列與行 \" 或 \" 行與高度 \" 或 \" 列與高度 \" 的資料，只是因為是三維，所以底下抓到的會是二維，\n",
+    "\n",
+    "# 或者說只看某一 \" 列 \" 或 \" 行 \" 或 \" 高度 \" 底下的變化，三維少一維就變成是二維的矩陣\n",
+    "\n",
+    "three_d_row_partial = three_dimension[0,:,:]\n",
+    "\n",
+    "three_d_column_partial = three_dimension[:,0,:]\n",
+    "\n",
+    "# 注意 : 高度 = 0 就是 list of list of list 底下最後一個 list 的第幾個元素，可以想成元素長度是高度\n",
+    "\n",
+    "# 升維就是元素變成 list / 元素往某軸長度變長 : \n",
+    "\n",
+    "# 原本一維 : [1,2,3] -> 二維 : 元素長大了，也變成 list [ [1,4] , [2,5] , [3,6] ] -> 三維 : 元素再次長大變成 list [ [ [1,7],[4,8] ] , [ [2,9],[5,10] ] , [ [3,11],[6,12] ] ]\n",
+    "\n",
+    "three_d_altitude_partial = three_dimension[:,:,0]\n",
+    "\n",
+    "print(three_d_row_partial)\n",
+    "\n",
+    "print(three_d_column_partial)\n",
+    "\n",
+    "print(three_d_altitude_partial)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 3. 全部元素呼叫\n",
+    "\n",
+    "\n",
+    "# a. 如果要呼叫全部元素，可以用 [ : ] 即可\n",
+    "\n",
+    "a = numpy.array([[1,2,3],[4,5,6]])\n",
+    "\n",
+    "print(a[:])\n",
+    "\n",
+    "\n",
+    "# b. 也因此可以把全部元素指派其他值\n",
+    "\n",
+    "a[:] = 255\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "\n",
+    "# 注意 : 陣列 = 255 只會變成一個 255 的數值，這樣做是不對的\n",
+    "\n",
+    "a = 255 \n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "# 只有布林陣列才可以這樣做，代表隊所有元素做比較\n",
+    "\n",
+    "b = numpy.array([[1,2,3],[4,5,6]])\n",
+    "\n",
+    "c = b<4\n",
+    "\n",
+    "print(c)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "36e97b63",
    "metadata": {},
    "outputs": [
@@ -451,23 +675,13 @@
     }
    ],
    "source": [
-    "# numpy 的其他技巧\n",
+    "# numpy 的其他函數\n",
     "\n",
     "import numpy\n",
     "\n",
     "\n",
     "\n",
-    "# 1. numpy 的一維單元素陣列可以直接當值來操作，不用做 int()\n",
-    "\n",
-    "array = numpy.array([1])\n",
-    "\n",
-    "a = array + 2 \n",
-    "\n",
-    "print(a)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 2. frompyfunc() 和 map() 的陣列轉換函數\n",
+    "# 1. frompyfunc() 和 map() 的陣列轉換函數\n",
     "\n",
     "# 一般的函數不支援陣列的引數和輸出，因此要用一些函數來幫助轉換成支援陣列，就像 numpy 的函數，例如 sum、log 等等，變成可以元素對元素計算\n",
     "\n",
@@ -591,13 +805,15 @@
     "\n",
     "# copy 是可以直接複製另一個陣列，zero 則是產生元素為 0 的陣列，而 zeros_like 就是兩者的結合，複製另一個陣列並把全部元素改為 0 \n",
     "\n",
+    "# 元素型別就是以原來的陣列元素型別\n",
+    "\n",
     "array = numpy.array([[1,2,3],[4,5,6]])\n",
     "\n",
     "array_2 = numpy.copy(array)\n",
     "\n",
     "print(array_2)\n",
     "\n",
-    "# zeros 可以指定陣列的欄和列，只要用 tuple 在引數輸入即可\n",
+    "# zeros 可以指定陣列的欄和列，只要用 tuple 在引數輸入即可，要注意預設產生浮點數\n",
     "\n",
     "array_3 = numpy.zeros(5)\n",
     "\n",
@@ -607,7 +823,9 @@
     "\n",
     "print(array_4)\n",
     "\n",
-    "# zeros_like 就是產生一個指定參考陣列的一樣大小的 0 陣列\n",
+    "# zeros_like 就是 copy + zeros , 產生一個指定參考陣列的一樣大小的 0 陣列\n",
+    "\n",
+    "# 元素型別和 copy 一樣以原來的陣列元素型別\n",
     "\n",
     "array_5 = numpy.zeros_like(array)\n",
     "\n",
