新增基本變數和 numpy 筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -621,7 +621,7 @@
     "# 3. 全部元素呼叫\n",
     "\n",
     "\n",
-    "# a. 如果要呼叫全部元素，可以用 [ : ] 即可\n",
+    "# a. 如果要呼叫全部元素，可以用 [ : ] 即可 ( list 切片的基本功能，numpy 是基於 list，所以也能用 ) \n",
     "\n",
     "a = numpy.array([[1,2,3],[4,5,6]])\n",
     "\n",
