--- a/基礎 python 語法練習/基本變數型別練習/code.ipynb
+++ b/基礎 python 語法練習/基本變數型別練習/code.ipynb
@@ -361,6 +361,8 @@
     }
    ],
    "source": [
+    "# list 的 copy 功能\n",
+    "\n",
     "a = [1,2,3]\n",
     "\n",
     "b = a[:]\n",
@@ -1127,6 +1129,41 @@
     "# 最後得到是 list of tuple \n",
     "\n",
     "print(sort_pair)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3d66dd14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n",
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list 的倒序排序\n",
+    "\n",
+    "# 用 [::-1] 即可，最後一個是一次跳幾階的引數，-1 就是減少\n",
+    "\n",
+    "a = [1,2,3,4,5]\n",
+    "\n",
+    "b = a[::-1]\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "# sort(reverse=True) 也可以排完再倒序變 desc，注意不會回傳，只有對原變數做變動\n",
+    "\n",
+    "a = [1,3,5,2,4]\n",
+    "\n",
+    "a.sort(reverse=True)\n",
+    "\n",
+    "print(a)\n"
    ]
   }
  ],
