修改基本變數練習和 Numpy 筆記

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -467,7 +467,14 @@
       " [255 255 255]]\n",
       "255\n",
       "[[ True  True  True]\n",
-      " [False False False]]\n"
+      " [False False False]]\n",
+      "[[1 1]\n",
+      " [3 4]]\n",
+      "[[[1 1]\n",
+      "  [1 1]]\n",
+      "\n",
+      " [[5 6]\n",
+      "  [7 8]]]\n"
      ]
     }
    ],
@@ -621,7 +628,7 @@
     "# 3. 全部元素呼叫\n",
     "\n",
     "\n",
-    "# a. 如果要呼叫全部元素，可以用 [ : ] 即可 ( list 切片的基本功能，numpy 是基於 list，所以也能用 ) \n",
+    "# a. 如果要呼叫全部元素，可以用 [ : ] 即可 ( list 切片的基本功能，numpy 是基於 list，也都支援切片，所以也能用 ) \n",
     "\n",
     "a = numpy.array([[1,2,3],[4,5,6]])\n",
     "\n",
@@ -635,7 +642,10 @@
     "print(a)\n",
     "\n",
     "\n",
-    "# 注意 : 陣列 = 255 只會變成一個 255 的數值，這樣做是不對的\n",
+    "# 注意 : \n",
+    "\n",
+    "\n",
+    "# a. 陣列 = 255 只會變成一個 255 的數值，這樣做是不對的\n",
     "\n",
     "a = 255 \n",
     "\n",
@@ -645,11 +655,28 @@
     "\n",
     "b = numpy.array([[1,2,3],[4,5,6]])\n",
     "\n",
-    "c = b<4\n",
+    "c = b < 4\n",
     "\n",
     "print(c)\n",
     "\n",
     "\n",
+    "# b. 但是如果讀取一個 > 1 維矩陣的一部分 = n 會使使定區域全部元素為 n，蠻方便的功能\n",
+    "\n",
+    "# 二維指定一個列\n",
+    "\n",
+    "d = numpy.array([ [1,2] , [3,4] ])\n",
+    "\n",
+    "d[0] = 1\n",
+    "\n",
+    "print(d)\n",
+    "\n",
+    "# 三維指定一個列\n",
+    "\n",
+    "e = numpy.array([ [ [1,2],[3,4] ] , [ [5,6],[7,8] ]])\n",
+    "\n",
+    "e[0] = 1\n",
+    "\n",
+    "print(e)\n",
     "\n",
     "\n"
    ]
@@ -676,6 +703,8 @@
    ],
    "source": [
     "# numpy 的其他函數\n",
+    "\n",
+    "\n",
     "\n",
     "import numpy\n",
     "\n",
