--- a/基礎 python 語法練習/基本變數型別練習/code.ipynb
+++ b/基礎 python 語法練習/基本變數型別練習/code.ipynb
@@ -1165,6 +1165,30 @@
     "\n",
     "print(a)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03d75330",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# range()\n",
+    "\n",
+    "# 主要功能是產生一個有順序數列的 iterable，基本上就是 list，不要忘了\n",
+    "\n",
+    "a = list(range(6))\n",
+    "\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
